# Lokicy

./: .gitignore  Cargo.toml  README.md
src/: application.rs  lib.rs
src/adapter/: gateway.rs
src/adapter/controller/: calc_damage_to_env_pokes.rs  show_all_possible_selections.rs  show_matchup_rate_table.rs
src/adapter/gateway/: box_pokemon_repository.rs  env_pokemon_repository.rs  rustemon.rs
src/application/: calc_damage_to_env_pokes.rs  interface.rs
src/entity/: pokemon.rs
src/interface/controller/: calc_damage_to_env_pokes.rs  show_all_possible_selections.rs  show_matchup_rate_table.rs
