[package]
name = "lokicy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[[bin]]
name = "main"
path = "src/interface/controller/main.rs"

[[bin]]
name = "show_matchup_rate_table"
path = "src/interface/controller/show_matchup_rate_table.rs"

[[bin]]
name = "show_all_possible_selections"
path = "src/interface/controller/show_all_possible_selections.rs"
